--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer components{
+  .nav-item{
+    @apply p-2 
+  }
+  .nav-item a{
+    @apply p-2 backdrop-blur-sm bg-white/10 rounded-md  hover:bg-gradient-to-r from-cyan-500 to-blue-500
+  }
+  .active{
+    @apply bg-gradient-to-r from-cyan-500 to-blue-500  rounded-md
+  }
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base{
+  html{
+    @apply bg-black text-white
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
