--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@
     @apply p-2
   }
   .active{
-    @apply text-transparent font-bold bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-600
+    @apply text-transparent font-bold bg-clip-text bg-gradient-to-r from-secondary-400 to-primary-600
   }
 
   .customeButton a:hover{
@@ -50,6 +50,10 @@
 
   .image-tint:hover:before{
     background: none;
+  }
+
+  .container-h {
+    min-height: 90vh;
   }
 
 }
